@@ -9,10 +9,10 @@ import java.lang.reflect.Method;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
-class JsonRunner {
+public class JsonRunner {
     private Date start = null;
-    private final Option option = new Option();
     private final Browser browser = new Browser();
+    private final Option option = new Option();
     private final String path;
     private final String webPageClassName = web.WebPage.class.getName();
     private final String chromeClassName = web.ChromeBrowser.class.getName();
@@ -30,7 +30,7 @@ class JsonRunner {
         return new ChromeBrowser();
     }
 
-    JsonRunner(String path, String browsers, String options) {
+    public JsonRunner(String path, String browsers, String options) {
         this.path = path;
         this.browsers = browsers;
         this.options = options;
@@ -43,7 +43,6 @@ class JsonRunner {
         } catch (IOException e) {
             e.printStackTrace();
         }
-
         start = new Date(System.currentTimeMillis());
         HTLMReport.write(new report.Step(parser.getTestCase(), "Initialize Test Case", start.toString()));
         browser.setBrowser(browsers);
@@ -56,9 +55,9 @@ class JsonRunner {
         List<Option> options = option.getOptions();
 
         if (browser.toString().equalsIgnoreCase(chrome().toString())) {
-            if (options.stream().anyMatch(o -> o.toString().contains("fastLoad"))) {
+            if (options.stream().parallel().anyMatch(o -> o.toString().contains("fastLoad"))) {
                 chrome().fastLoad();
-            } else if (options.stream().anyMatch(o -> o.toString().contains("headless"))) {
+            } else if (options.stream().parallel().anyMatch(o -> o.toString().contains("headless"))) {
                 chrome().headleass();
             } else {
                 chrome().normal();
@@ -72,16 +71,16 @@ class JsonRunner {
         }
     }
 
-    void start() {
+    public void start() {
         test().getTestCase();
     }
 
-    void end() {
+    public void end() {
         Date end = new Date(System.currentTimeMillis());
-        HTLMReport.write(new report.Step("END TIME", "Test Suite Ended", end.toString()));
+        HTLMReport.write(new report.Step("END TIME", "Test Case Ended", end.toString()));
 
         long diff = TimeUnit.DAYS.convert(Math.abs(end.getTime() - start.getTime()), TimeUnit.MILLISECONDS);
-        HTLMReport.write(new report.Step("TOTAL TIME", "Test Suite Total", String.valueOf(diff)));
+        HTLMReport.write(new report.Step("TOTAL TIME", "Test Suite Total", String.valueOf(diff))); //todo fix
     }
 
     private void runStep(TestStep step) {
@@ -89,14 +88,10 @@ class JsonRunner {
 
         try {
 
-            if (invokeMethod(webPageClassName, step.name, step) ||
+            if(invokeMethod(webPageClassName, step.name, step) ||
                     invokeMethod(validationClassName, step.name, step) ||
                     invokeMethod(webPageComponentClassName, step.name, step) ||
-                    invokeMethod(chromeClassName, step.name, step)) {
-
-                Date end = new Date(System.currentTimeMillis());
-                HTLMReport.write(new report.Step("END TIME", "Test Case Ended", end.toString()));
-            }
+                    invokeMethod(chromeClassName, step.name, step) );
         } catch (Exception | AssertionError exc) {
             exception = new Exception(exc.getCause());
         } finally {
@@ -104,27 +99,26 @@ class JsonRunner {
                     exception == null ? step.description : String.format("%s\nException: %s", step.description, exception.toString()),
                     step.name, step.locatorType, step.locator, step.value, exception == null));
         }
-
     }
 
     private void runSteps() {
-        try {
-            test().getSteps().stream().forEach(step -> {
-                runStep(step);
-            });
-        } finally {
-            wrapUp(browser);
-        }
-    }
-
-    void runBrowser() {
-        browser.getBrowsers().stream().forEach(b -> {
-            setBrowser(b);
-            runSteps();
+        test().getSteps().forEach(step -> {
+            runStep(step);
         });
     }
 
-    static boolean invokeMethod(String className, String methodName, TestStep step) throws ClassNotFoundException, IllegalAccessException, InstantiationException, InvocationTargetException {
+    public void runBrowser() {
+        browser.getBrowsers().forEach(b -> {
+            try {
+                setBrowser(b);
+                runSteps();
+            } finally {
+                wrapUp(b);
+            }
+        });
+    }
+
+    static boolean invokeMethod(String className, String methodName, TestStep step) throws ClassNotFoundException, IllegalAccessException, InstantiationException, InvocationTargetException, NoSuchMethodException {
         Class<?> clazz = Class.forName(className);
         List<Method> methods = Arrays.asList(clazz.getDeclaredMethods());
         Optional<Method> optionalMethod = methods.stream().filter(m -> m.getName().equalsIgnoreCase(methodName)).findFirst();
@@ -134,9 +128,9 @@ class JsonRunner {
         if(method != null) {
             method.setAccessible(true);
             if(method.getParameterCount() > 0) {
-                method.invoke(clazz.newInstance(), step);
+                method.invoke(clazz.getDeclaredConstructor().newInstance(), step);
             } else {
-                method.invoke(clazz.newInstance());
+                method.invoke(clazz.getDeclaredConstructor());
             }
             result = true;
         }
